tests/snapshots/parser/image_nested_parentheses.snap
---
source: tests/snapshot_parse.rs
assertion_line: 32
description: "![diagram](./img(test).png)\n"
---
Document [0..28]
  Paragraph [0..28]
    Image url="./img(test).png" alt="diagram" title=None [0..27]
