tests/snapshots/parser/indented_code_block_preserves_blank_lines.snap
---
source: tests/snapshot_parse.rs
description: "    line a\n\n    line b\n    line c\n"
---
Document [0..34]
  CodeBlock lang=None meta=None value="line a\n\nline b\nline c\n" [0..34]
